minesweeper.css
body {
    background-color: aliceblue;
}
.minefield-container {
    align-items: center;
    display: flex;
    justify-content: center;   
    flex-direction: column;
}

.title {
    font-size: 2em;
}

.minefield-ui {
    align-items: center;
    display: flex;
    justify-content: center;   
    flex-direction: row;
}

.display-bombs {    
    font-size: x-large;
}


.button-replay {
    margin: 20px;
}

.minefield {    
    border-spacing:0px;
    box-shadow: 0px 0px 20px black;
}

.minefield td {
    padding:0
}

.spot {
    width: 20px;
    height: 20px;
}
.spot-covered {    
    background-color: gray;
    border: 3px outset lightgray;        
}

.spot-flagged {
    background-color: gray;
    border: 3px outset lightgray;
    text-align: center; 
    line-height: 20px;
    color: red;
}

.spot-uncovered {    
    background-color: lightgray; 
    border: 0.5px solid gray;
    padding: 2.5px;
    font-weight: 900;
    font-size: large;
    text-align: center;    
}

/* .spot-mine {
    background-color: firebrick;
} */
.spot-one {        
    color: blue;
}
.spot-two {        
    color: green;
}
.spot-three {        
    color: red;
}
.spot-four {        
    color: blue;
}
.spot-five {        
    color: brown;
}
.spot-six {        
    color: cyan;
}
.spot-seven {        
    color: brown;
}
.spot-eight {        
    color: black;
}

